[tool.poetry]
name = "betting-bot"
version = "0.1.0"
description = ""
authors = ["Kejte"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.18.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
fake-useragent = "^2.0.3"
environs = "^14.1.1"
lxml = "^5.3.1"
redis = "^5.2.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
